--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular/compiler-cli": "^16.1.0",
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.3.0",
+    "angular-cli-ghpages": "^1.0.6",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
